--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^2.2.0",
 		"cloudinary": "^2.4.0",
 		"cookie-parser": "^1.4.6",
+		"crypto": "^1.0.1",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.5.3",
+		"razorpay": "^2.9.6",
 		"stripe": "^16.8.0"
 	},
 	"devDependencies": {
